fix fonts on mobile web browser

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Lato";
+  src: url("fonts/Lato-Regular.woff2") format("woff2");
+}
+@font-face {
+  font-family: "Montserrat";
+  src: url("fonts/Montserrat-VariableFont_wght.woff2") format("woff2");
+}
+
 /* Firefox */
 * {
   scrollbar-width: thin;
